--- a/src/index.html
+++ b/src/index.html
@@ -4,19 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>oef2js</title>
     <!-- <link href="" rel="shortcut icon" type="image/x-icon" /> -->
   </head>
   <body>
     <include src="./symbol-defs.svg"></include>
-    <include src="./header.html"></include>
-    <h1>
-      Home<svg class="icon icon-shrink2">
-        <use href="#icon-shrink2" />
-      </svg>
-    </h1>
-    <div class="test"></div>
-    <include src="./footer.html"></include>
+
     <script src="./js/index.js"></script>
   </body>
 </html>
