--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <include src="./symbol-defs.svg"></include>
-
+    <div id="root"></div>
     <script src="./js/index.js"></script>
   </body>
 </html>
